--- a/content/about/en.mdx
+++ b/content/about/en.mdx
@@ -1,15 +1,20 @@
+---
+title: 'About Eleva Care'
+description: "Transforming women's health care through innovation and compassion"
+---
+
 import { Button } from '@/components/atoms/button';
 import { Separator } from '@/components/atoms/separator';
 import Image from 'next/image';
 
-import TextBlock from '../../../../../components/atoms/TextBlock';
-import HeadlineSection from '../../../../../components/molecules/HeadlineSection';
-import AdvisorsSection from '../../../../../components/organisms/about/AdvisorsSection';
-import BeliefsSection from '../../../../../components/organisms/about/BeliefsSection';
-import ClinicalExpertsSection from '../../../../../components/organisms/about/ClinicalExpertsSection';
-import JoinNetworkSection from '../../../../../components/organisms/about/JoinNetworkSection';
-import MissionSection from '../../../../../components/organisms/about/MissionSection';
-import TeamSection from '../../../../../components/organisms/about/TeamSection';
+import TextBlock from '@/components/atoms/TextBlock';
+import HeadlineSection from '@/components/molecules/HeadlineSection';
+import AdvisorsSection from '@/components/organisms/about/AdvisorsSection';
+import BeliefsSection from '@/components/organisms/about/BeliefsSection';
+import ClinicalExpertsSection from '@/components/organisms/about/ClinicalExpertsSection';
+import JoinNetworkSection from '@/components/organisms/about/JoinNetworkSection';
+import MissionSection from '@/components/organisms/about/MissionSection';
+import TeamSection from '@/components/organisms/about/TeamSection';
 
 <HeadlineSection
   headingLevel="h1"
