fix the MDX formating issues

--- a/app/[locale]/(public)/about/content/about_pt.mdx
+++ b/app/[locale]/(public)/about/content/about_pt.mdx
@@ -1,13 +1,7 @@
----
-title: 'Sobre a Eleva Care'
-description: 'Transformando os cuidados de saúde das mulheres através da inovação e compaixão'
----
-
 import { Button } from '@/components/atoms/button';
 import { Separator } from '@/components/atoms/separator';
 import Image from 'next/image';
 
-import TextBlock from '@/components/atoms/TextBlock';
 import HeadlineSection from '@/components/molecules/HeadlineSection';
 import AdvisorsSection from '@/components/organisms/about/AdvisorsSection';
 import BeliefsSection from '@/components/organisms/about/BeliefsSection';
@@ -17,20 +11,20 @@ import MissionSection from '@/components/organisms/about/MissionSection';
 import TeamSection from '@/components/organisms/about/TeamSection';
 
 <HeadlineSection
-  title="Transformando o cuidado de saúde da mulher através da inovação e compaixão"
-  description="Na Eleva Care, nos dedicamos a capacitar mulheres de todas as idades para que assumam o controle de sua saúde e bem-estar."
+  title="Transformando os cuidados de saúde da mulher através da inovação e compaixão"
+  description="Na Eleva Care, dedicamo-nos a capacitar mulheres de todas as idades para que assumam o controlo da sua saúde e bem-estar."
 />
 
 <MissionSection
-  title="Nossa missão"
+  title="A nossa missão"
   description={[
     {
       paragraph:
-        'Nossa missão é fornecer uma plataforma de apoio e inclusiva que conecte indivíduos a recursos liderados por especialistas, informações baseadas em evidências e uma comunidade colaborativa de profissionais de saúde.',
+        'A nossa missão é proporcionar uma plataforma de apoio e inclusiva que ligue os indivíduos a recursos liderados por especialistas, informações baseadas em evidências e uma comunidade colaborativa de profissionais de saúde.',
     },
     {
       paragraph:
-        'Acreditamos em tornar os cuidados de saúde de qualidade acessíveis a todas as mulheres, capacitando-as com conhecimento e promovendo a colaboração para melhores resultados de saúde. Nossa abordagem reconhece que a saúde da mulher é uma jornada contínua e em evolução.',
+        'Acreditamos em tornar os cuidados de saúde de qualidade acessíveis a todas as mulheres, capacitando-as com conhecimento e fomentando a colaboração para melhores resultados de saúde. A nossa abordagem reconhece que a saúde da mulher é uma jornada contínua e em evolução.',
     },
   ]}
   statsTitle="Os números"
@@ -43,7 +37,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 <HeadlineSection
   label="Nossa visão"
   title="Unindo ciência e cuidado para cada mulher"
-  description="Para unir o gap entre pesquisa científica e aplicação prática, entregando soluções de cuidados de saúde da mulher de forma acessível e personalizadas em todas as fases da vida."
+  description="Para unir o gap entre a pesquisa científica e a aplicação prática, entregando soluções de cuidados de saúde da mulher de forma acessível e personalizadas em todas as etapas da vida."
 />
 
 <BeliefsSection
@@ -52,15 +46,15 @@ import TeamSection from '@/components/organisms/about/TeamSection';
     {
       title: 'Acesso a Cuidados de Saúde de Qualidade',
       description:
-        'Todas as mulheres merecem acesso a cuidados de saúde de qualidade, independentemente da localização ou circunstâncias.',
+        'Cada mulher merece acesso a cuidados de saúde de qualidade, independentemente da localização ou circunstâncias.',
     },
     {
-      title: 'Conhecimento é Poder',
+      title: 'O conhecimento é poder',
       description:
-        'Capacitar as mulheres com informações baseadas em evidências para tomar decisões informadas sobre sua saúde.',
+        'Capacitar as mulheres com informações baseadas em evidências para tomar decisões informadas sobre a sua jornada de saúde.',
     },
     {
-      title: 'Cuidados Colaborativos',
+      title: 'Cuidados colaborativos',
       description:
         'Melhores resultados de saúde são alcançados através da colaboração entre pacientes e profissionais de saúde.',
     },
@@ -73,9 +67,9 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 />
 
 <HeadlineSection
-  label="Conheça a nossa equipe"
+  label="Conheça o nosso equipa"
   title="Liderada por inovadores e especialistas em saúde"
-  description="Nossa equipe combina expertise em saúde da mulher, tecnologia e cuidado com pacientes para revolucionar a entrega de cuidados de saúde."
+  description="O nosso equipa combina expertise em saúde da mulher, tecnologia e cuidado com pacientes para revolucionar a entrega de cuidados de saúde."
 />
 
 <TeamSection
@@ -86,7 +80,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
     },
     {
       paragraph:
-        'Hoje, a Eleva Care está transformando a forma como as mulheres acessam e experimentam os cuidados de saúde. Nossa plataforma conecta milhares de mulheres a prestadores de cuidados de saúde especializados, oferecendo cuidados baseados em evidências e apoio ao longo de cada etapa da vida.',
+        'Hoje, a Eleva Care está a transformar a forma como as mulheres acedem e experimentam os cuidados de saúde. A nossa plataforma liga milhares de mulheres a prestadores de cuidados de saúde especializados, oferecendo cuidados baseados em evidências e apoio ao longo de cada etapa da vida.',
     },
   ]}
   title="Nossa liderança"
@@ -120,7 +114,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
       flags: '🇧🇷',
       role: 'Consultora em Saúde da Mulher',
       quote:
-        'A pesquisa clínica e a educação capacitam as mulheres para tomarem decisões informadas sobre sua jornada de saúde',
+        'A investigação clínica e a educação capacitam as mulheres para tomarem decisões informadas sobre a sua jornada de saúde',
       image: '/img/about/team/team-cristine-homsi-jorge.jpg',
     },
     {
@@ -136,7 +130,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
       flags: '🇧🇷',
       role: 'Consultora em Saúde da Mulher',
       quote:
-        'A pesquisa clínica avança nos tratamentos de reabilitação enquanto capacita as mulheres através da educação baseada em evidências.',
+        'A investigação clínica avança nos tratamentos de reabilitação enquanto capacita as mulheres através da educação baseada em evidências.',
       image: '/img/about/team/team-patricia-driusso.jpg',
     },
     {
@@ -144,7 +138,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
       flags: '🇸🇪',
       role: 'Consultora em Saúde da Mulher',
       quote:
-        'Compreender os mecanismos da dor transforma a forma como cuidamos das mulheres durante a gravidez e além.',
+        'Compreender os mecanismos da dor transforma a forma como cuidamos das mulheres durante a gravidez e para além dela.',
       image: '/img/about/team/team-annelie-gutke.jpg',
     },
     {
@@ -160,7 +154,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
       flags: '🇺🇸',
       role: 'Consultora em Biomecânica e Saúde Perinatal',
       quote:
-        'Compreender os padrões de movimento durante e após a gravidez ajuda a otimizar os cuidados e melhorar os resultados a longo prazo para as mulheres.',
+        'Compreender os padrões de movimento durante e após a gravidez ajuda a otimizar os cuidados e a melhorar os resultados a longo prazo para as mulheres.',
       image: '/img/about/team/team-jenny-bagwell-california-usa.jpg',
     },
   ]}
@@ -183,10 +177,11 @@ import TeamSection from '@/components/organisms/about/TeamSection';
     },
   ]}
 />
+
 <HeadlineSection
-  label="Junte-se à nossa rede"
-  title="Transforme os cuidados de saúde da mulher conosco"
-  description="Junte-se a uma comunidade de profissionais de saúde dedicados que tornam os cuidados de qualidade acessíveis às mulheres em todo lugar."
+  label="Join our network"
+  title="Transform women's healthcare with us"
+  description="Join a community of dedicated healthcare professionals making quality care accessible to women everywhere."
 />
 
 <JoinNetworkSection
@@ -195,17 +190,17 @@ import TeamSection from '@/components/organisms/about/TeamSection';
     {
       title: 'Prática Flexível',
       description:
-        'Pratique nos seus termos com nossa plataforma flexível de telesaúde. Defina seu próprio horário e conecte-se com pacientes de qualquer lugar.',
+        'Pratique nos seus termos com a nossa plataforma flexível de telesaúde. Defina o seu próprio horário e conecte-se com pacientes de qualquer lugar.',
     },
     {
       title: 'Tecnologia Inovadora',
       description:
-        'Acesse ferramentas de telesaúde de ponta e suporte clínico assistido por IA para melhorar sua prática.',
+        'Aceda a ferramentas de telesaúde de ponta e suporte clínico assistido por IA para melhorar a sua prática.',
     },
     {
       title: 'Comunidade Colaborativa',
       description:
-        'Junte-se a uma rede de profissionais de saúde líderes e participe em discussões de casos e compartilhamento de conhecimentos.',
+        'Junte-se a uma rede de profissionais de saúde líderes e participe em discussões de casos e partilha de conhecimentos.',
     },
   ]}
   applyUrl="https://accounts.eleva.care/waitlist"
