--- a/app/[locale]/(public)/about/content/about_br.mdx
+++ b/app/[locale]/(public)/about/content/about_br.mdx
@@ -1,12 +1,8 @@
----
-title: 'Sobre a Eleva Care'
-description: 'Transformando os cuidados de saúde das mulheres através da inovação e compaixão'
----
-
 import { Button } from '@/components/atoms/button';
 import { Separator } from '@/components/atoms/separator';
 import Image from 'next/image';
 
+import TextBlock from '@/components/atoms/TextBlock';
 import HeadlineSection from '@/components/molecules/HeadlineSection';
 import AdvisorsSection from '@/components/organisms/about/AdvisorsSection';
 import BeliefsSection from '@/components/organisms/about/BeliefsSection';
@@ -16,20 +12,20 @@ import MissionSection from '@/components/organisms/about/MissionSection';
 import TeamSection from '@/components/organisms/about/TeamSection';
 
 <HeadlineSection
-  title="Transformando os cuidados de saúde da mulher através da inovação e compaixão"
-  description="Na Eleva Care, dedicamo-nos a capacitar mulheres de todas as idades para que assumam o controlo da sua saúde e bem-estar."
+  title="Transformando o cuidado de saúde da mulher através da inovação e compaixão"
+  description="Na Eleva Care, nos dedicamos a capacitar mulheres de todas as idades para que assumam o controle de sua saúde e bem-estar."
 />
 
 <MissionSection
-  title="A nossa missão"
+  title="Nossa missão"
   description={[
     {
       paragraph:
-        'A nossa missão é proporcionar uma plataforma de apoio e inclusiva que ligue os indivíduos a recursos liderados por especialistas, informações baseadas em evidências e uma comunidade colaborativa de profissionais de saúde.',
+        'Nossa missão é fornecer uma plataforma de apoio e inclusiva que conecte indivíduos a recursos liderados por especialistas, informações baseadas em evidências e uma comunidade colaborativa de profissionais de saúde.',
     },
     {
       paragraph:
-        'Acreditamos em tornar os cuidados de saúde de qualidade acessíveis a todas as mulheres, capacitando-as com conhecimento e fomentando a colaboração para melhores resultados de saúde. A nossa abordagem reconhece que a saúde da mulher é uma jornada contínua e em evolução.',
+        'Acreditamos em tornar os cuidados de saúde de qualidade acessíveis a todas as mulheres, capacitando-as com conhecimento e promovendo a colaboração para melhores resultados de saúde. Nossa abordagem reconhece que a saúde da mulher é uma jornada contínua e em evolução.',
     },
   ]}
   statsTitle="Os números"
@@ -42,7 +38,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 <HeadlineSection
   label="Nossa visão"
   title="Unindo ciência e cuidado para cada mulher"
-  description="Para unir o gap entre a pesquisa científica e a aplicação prática, entregando soluções de cuidados de saúde da mulher de forma acessível e personalizadas em todas as etapas da vida."
+  description="Para unir o gap entre pesquisa científica e aplicação prática, entregando soluções de cuidados de saúde da mulher de forma acessível e personalizadas em todas as fases da vida."
 />
 
 <BeliefsSection
@@ -51,15 +47,15 @@ import TeamSection from '@/components/organisms/about/TeamSection';
     {
       title: 'Acesso a Cuidados de Saúde de Qualidade',
       description:
-        'Cada mulher merece acesso a cuidados de saúde de qualidade, independentemente da localização ou circunstâncias.',
+        'Todas as mulheres merecem acesso a cuidados de saúde de qualidade, independentemente da localização ou circunstâncias.',
     },
     {
-      title: 'O conhecimento é poder',
+      title: 'Conhecimento é Poder',
       description:
-        'Capacitar as mulheres com informações baseadas em evidências para tomar decisões informadas sobre a sua jornada de saúde.',
+        'Capacitar as mulheres com informações baseadas em evidências para tomar decisões informadas sobre sua saúde.',
     },
     {
-      title: 'Cuidados colaborativos',
+      title: 'Cuidados Colaborativos',
       description:
         'Melhores resultados de saúde são alcançados através da colaboração entre pacientes e profissionais de saúde.',
     },
@@ -72,9 +68,9 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 />
 
 <HeadlineSection
-  label="Conheça o nosso equipa"
+  label="Conheça a nossa equipe"
   title="Liderada por inovadores e especialistas em saúde"
-  description="O nosso equipa combina expertise em saúde da mulher, tecnologia e cuidado com pacientes para revolucionar a entrega de cuidados de saúde."
+  description="Nossa equipe combina expertise em saúde da mulher, tecnologia e cuidado com pacientes para revolucionar a entrega de cuidados de saúde."
 />
 
 <TeamSection
@@ -85,7 +81,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
     },
     {
       paragraph:
-        'Hoje, a Eleva Care está a transformar a forma como as mulheres acedem e experimentam os cuidados de saúde. A nossa plataforma liga milhares de mulheres a prestadores de cuidados de saúde especializados, oferecendo cuidados baseados em evidências e apoio ao longo de cada etapa da vida.',
+        'Hoje, a Eleva Care está transformando a forma como as mulheres acessam e experimentam os cuidados de saúde. Nossa plataforma conecta milhares de mulheres a prestadores de cuidados de saúde especializados, oferecendo cuidados baseados em evidências e apoio ao longo de cada etapa da vida.',
     },
   ]}
   title="Nossa liderança"
@@ -119,7 +115,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
       flags: '🇧🇷',
       role: 'Consultora em Saúde da Mulher',
       quote:
-        'A investigação clínica e a educação capacitam as mulheres para tomarem decisões informadas sobre a sua jornada de saúde',
+        'A pesquisa clínica e a educação capacitam as mulheres para tomarem decisões informadas sobre sua jornada de saúde',
       image: '/img/about/team/team-cristine-homsi-jorge.jpg',
     },
     {
@@ -135,7 +131,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
       flags: '🇧🇷',
       role: 'Consultora em Saúde da Mulher',
       quote:
-        'A investigação clínica avança nos tratamentos de reabilitação enquanto capacita as mulheres através da educação baseada em evidências.',
+        'A pesquisa clínica avança nos tratamentos de reabilitação enquanto capacita as mulheres através da educação baseada em evidências.',
       image: '/img/about/team/team-patricia-driusso.jpg',
     },
     {
@@ -143,7 +139,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
       flags: '🇸🇪',
       role: 'Consultora em Saúde da Mulher',
       quote:
-        'Compreender os mecanismos da dor transforma a forma como cuidamos das mulheres durante a gravidez e para além dela.',
+        'Compreender os mecanismos da dor transforma a forma como cuidamos das mulheres durante a gravidez e além.',
       image: '/img/about/team/team-annelie-gutke.jpg',
     },
     {
@@ -159,7 +155,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
       flags: '🇺🇸',
       role: 'Consultora em Biomecânica e Saúde Perinatal',
       quote:
-        'Compreender os padrões de movimento durante e após a gravidez ajuda a otimizar os cuidados e a melhorar os resultados a longo prazo para as mulheres.',
+        'Compreender os padrões de movimento durante e após a gravidez ajuda a otimizar os cuidados e melhorar os resultados a longo prazo para as mulheres.',
       image: '/img/about/team/team-jenny-bagwell-california-usa.jpg',
     },
   ]}
@@ -182,11 +178,10 @@ import TeamSection from '@/components/organisms/about/TeamSection';
     },
   ]}
 />
-
 <HeadlineSection
-  label="Join our network"
-  title="Transform women's healthcare with us"
-  description="Join a community of dedicated healthcare professionals making quality care accessible to women everywhere."
+  label="Junte-se à nossa rede"
+  title="Transforme os cuidados de saúde da mulher conosco"
+  description="Junte-se a uma comunidade de profissionais de saúde dedicados que tornam os cuidados de qualidade acessíveis às mulheres em todo lugar."
 />
 
 <JoinNetworkSection
@@ -195,17 +190,17 @@ import TeamSection from '@/components/organisms/about/TeamSection';
     {
       title: 'Prática Flexível',
       description:
-        'Pratique nos seus termos com a nossa plataforma flexível de telesaúde. Defina o seu próprio horário e conecte-se com pacientes de qualquer lugar.',
+        'Pratique nos seus termos com nossa plataforma flexível de telesaúde. Defina seu próprio horário e conecte-se com pacientes de qualquer lugar.',
     },
     {
       title: 'Tecnologia Inovadora',
       description:
-        'Aceda a ferramentas de telesaúde de ponta e suporte clínico assistido por IA para melhorar a sua prática.',
+        'Acesse ferramentas de telesaúde de ponta e suporte clínico assistido por IA para melhorar sua prática.',
     },
     {
       title: 'Comunidade Colaborativa',
       description:
-        'Junte-se a uma rede de profissionais de saúde líderes e participe em discussões de casos e partilha de conhecimentos.',
+        'Junte-se a uma rede de profissionais de saúde líderes e participe em discussões de casos e compartilhamento de conhecimentos.',
     },
   ]}
   applyUrl="https://accounts.eleva.care/waitlist"
