add Kari and review text PT

--- a/content/about/en.mdx
+++ b/content/about/en.mdx
@@ -112,6 +112,30 @@ import TeamSection from '@/components/organisms/about/TeamSection';
   title="Healthcare Innovation"
   healthcareAdvisors={[
     {
+      name: 'Kari Bø, PT, PhD',
+      flags: '🇳🇴',
+      role: 'Board Advisor Pelvic Floor Health',
+      quote:
+        'Evidence-based pelvic-floor muscle training not only prevents and treats dysfunction—it empowers women to live confidently and fully at every stage of life.',
+      image: '/img/about/team/team-kari-bo.jpg',
+    },
+        {
+      name: 'Ruben Barakat, PhD',
+      flags: '🇦🇷 🇪🇸',
+      role: 'Board Advisor Exercise Science',
+      quote:
+        "Evidence shows that personalized exercise during pregnancy can transform women's health outcomes.",
+      image: '/img/about/team/team-ruben-barakat.jpg',
+    },
+        {
+      name: 'Alexandre Delgado, PT, PhD',
+      flags: '🇧🇷',
+      role: 'Board Advisor Obstetric Physical Therapy',
+      quote:
+        'Evidence-based physical therapy transforms the pregnancy and birth experience, empowering women through every stage.',
+      image: '/img/about/team/team-alexandre-delgado.jpg',
+    },
+    {
       name: 'Cristine Homsi Jorge, PT, PhD',
       flags: '🇧🇷',
       role: "Board Advisor Women's Health",
@@ -119,13 +143,21 @@ import TeamSection from '@/components/organisms/about/TeamSection';
         'Clinical research and education empower women to make informed decisions about their healthcare journey',
       image: '/img/about/team/team-cristine-homsi-jorge.jpg',
     },
-    {
-      name: 'Alexandre Delgado, PT, PhD',
-      flags: '🇧🇷',
-      role: 'Board Advisor Obstetric Physical Therapy',
+ {
+      name: 'Annelie Gutke, PT, PhD',
+      flags: '🇸🇪',
+      role: "Board Advisor Women's Health",
       quote:
-        'Evidence-based physical therapy transforms the pregnancy and birth experience, empowering women through every stage.',
-      image: '/img/about/team/team-alexandre-delgado.jpg',
+        'Understanding pain mechanisms transforms how we care for women during pregnancy and beyond.',
+      image: '/img/about/team/team-annelie-gutke.jpg',
+    },
+       {
+      name: 'Joana Goulão Barros, MD, PhD',
+      flags: '🇵🇹',
+      role: 'Board Advisor Women\'s Lifecycle Care',
+      quote:
+        'Seamless, team-based care across every life stage—from adolescence through pregnancy, childbirth, and menopause—ensures women receive the personalized support they need to thrive.',
+      image: '/img/about/team/team-joana-barros.jpg',
     },
     {
       name: 'Patricia Driusso, PT, PhD',
@@ -135,22 +167,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
         'Clinical research advances rehabilitation treatments while empowering women through evidence-based education.',
       image: '/img/about/team/team-patricia-driusso.jpg',
     },
-    {
-      name: 'Annelie Gutke, PT, PhD',
-      flags: '🇸🇪',
-      role: "Board Advisor Women's Health",
-      quote:
-        'Understanding pain mechanisms transforms how we care for women during pregnancy and beyond.',
-      image: '/img/about/team/team-annelie-gutke.jpg',
-    },
-    {
-      name: 'Ruben Barakat, PhD',
-      flags: '🇦🇷 🇪🇸',
-      role: 'Board Advisor Exercise Science',
-      quote:
-        "Evidence shows that personalized exercise during pregnancy can transform women's health outcomes.",
-      image: '/img/about/team/team-ruben-barakat.jpg',
-    },
+
     {
       name: 'Jenny Bagwell, PT, PhD, DPT',
       flags: '🇺🇸',
@@ -159,25 +176,8 @@ import TeamSection from '@/components/organisms/about/TeamSection';
         'Understanding movement patterns during and after pregnancy helps optimize care and improve long-term outcomes for women.',
       image: '/img/about/team/team-jenny-bagwell-california-usa.jpg',
     },
-  ]}
-/>
 
-<ClinicalExpertsSection
-  title="Clinical Experts"
-  clinicalExperts={[
-    {
-      name: 'Jessica Margarido, PT',
-      flags: '🇵🇹',
-      role: 'Oncology Rehabilitation',
-      image: '/img/about/team/team-jessica-margarido.jpg',
-    },
-    {
-      name: 'Joana Goulão Barros, MD, PhD',
-      flags: '🇵🇹',
-      role: 'Obstetrics & Gynecology',
-      image: '/img/about/team/team-joana-barros.jpg',
-    },
-  ]}
+]}
 />
 
 <HeadlineSection
