--- a/content/about/es.mdx
+++ b/content/about/es.mdx
@@ -111,36 +111,12 @@ import TeamSection from '@/components/organisms/about/TeamSection';
   title="Innovación en Salud"
   healthcareAdvisors={[
     {
-      name: 'Cristine Homsi Jorge, PT, PhD',
-      flags: '🇧🇷',
-      role: 'Asesora de Salud Femenina',
+      name: 'Kari Bø, PT, PhD',
+      flags: '🇳🇴',
+      role: 'Asesora de Salud Pelvica',
       quote:
-        'La investigación clínica y la educación empoderan a las mujeres para tomar decisiones informadas sobre su viaje de salud',
-      image: '/img/about/team/team-cristine-homsi-jorge.jpg',
-    },
-    {
-      name: 'Alexandre Delgado, PT, PhD',
-      flags: '🇧🇷',
-      role: 'Asesor de Fisioterapia Obstétrica',
-      quote:
-        'La fisioterapia basada en evidencia transforma la experiencia del embarazo y el parto, empoderando a las mujeres en cada etapa.',
-      image: '/img/about/team/team-alexandre-delgado.jpg',
-    },
-    {
-      name: 'Patricia Driusso, PT, PhD',
-      flags: '🇧🇷',
-      role: 'Asesora de Salud Femenina',
-      quote:
-        'La investigación clínica avanza en los tratamientos de rehabilitación mientras empodera a las mujeres a través de la educación basada en evidencia.',
-      image: '/img/about/team/team-patricia-driusso.jpg',
-    },
-    {
-      name: 'Annelie Gutke, PT, PhD',
-      flags: '🇸🇪',
-      role: 'Asesora de Salud Femenina',
-      quote:
-        'Entender los mecanismos del dolor transforma cómo cuidamos a las mujeres durante el embarazo y más allá.',
-      image: '/img/about/team/team-annelie-gutke.jpg',
+        'El entrenamiento de los músculos del suelo pélvico basado en la evidencia no sólo previene y trata las disfunciones, sino que permite a las mujeres vivir con confianza y plenamente en todas las etapas de la vida.',
+      image: '/img/about/team/team-kari-bo.jpg',
     },
     {
       name: 'Ruben Barakat, PhD',
@@ -151,6 +127,47 @@ import TeamSection from '@/components/organisms/about/TeamSection';
       image: '/img/about/team/team-ruben-barakat.jpg',
     },
     {
+      name: 'Alexandre Delgado, PT, PhD',
+      flags: '🇧🇷',
+      role: 'Asesor de Fisioterapia Obstétrica',
+      quote:
+        'La fisioterapia basada en evidencia transforma la experiencia del embarazo y el parto, empoderando a las mujeres en cada etapa.',
+      image: '/img/about/team/team-alexandre-delgado.jpg',
+    },
+    {
+      name: 'Cristine Homsi Jorge, PT, PhD',
+      flags: '🇧🇷',
+      role: 'Asesora de Salud Femenina',
+      quote:
+        'La investigación clínica y la educación empoderan a las mujeres para tomar decisiones informadas sobre su viaje de salud',
+      image: '/img/about/team/team-cristine-homsi-jorge.jpg',
+    },
+  {
+      name: 'Annelie Gutke, PT, PhD',
+      flags: '🇸🇪',
+      role: 'Asesora de Salud Femenina',
+      quote:
+        'Entender los mecanismos del dolor transforma cómo cuidamos a las mujeres durante el embarazo y más allá.',
+      image: '/img/about/team/team-annelie-gutke.jpg',
+    },
+         {
+      name: 'Joana Goulão Barros, MD, PhD',
+      flags: '🇵🇹',
+      role: 'Asesora de Atención a la Mujer',
+      quote:
+        'La atención integral y en equipo en todas las etapas de la vida -desde la adolescencia hasta el embarazo, el parto y la menopausia- garantiza que las mujeres reciban el apoyo personalizado que necesitan.',
+      image: '/img/about/team/team-joana-barros.jpg',
+    },
+    {
+      name: 'Patricia Driusso, PT, PhD',
+      flags: '🇧🇷',
+      role: 'Asesora de Salud Femenina',
+      quote:
+        'La investigación clínica avanza en los tratamientos de rehabilitación mientras empodera a las mujeres a través de la educación basada en evidencia.',
+      image: '/img/about/team/team-patricia-driusso.jpg',
+    },
+
+    {
       name: 'Jenny Bagwell, PT, PhD, DPT',
       flags: '🇺🇸',
       role: 'Asesora de Biomecánica y Salud Perinatal',
@@ -158,25 +175,8 @@ import TeamSection from '@/components/organisms/about/TeamSection';
         'Entender los patrones de movimiento durante y después del embarazo ayuda a optimizar la atención y mejorar los resultados a largo plazo para las mujeres.',
       image: '/img/about/team/team-jenny-bagwell-california-usa.jpg',
     },
-  ]}
-/>
 
-<ClinicalExpertsSection
-  title="Especialistas Clínicos"
-  clinicalExperts={[
-    {
-      name: 'Jessica Margarido, PT',
-      flags: '🇵🇹',
-      role: 'Rehabilitación Oncológica',
-      image: '/img/about/team/team-jessica-margarido.jpg',
-    },
-    {
-      name: 'Joana Goulão Barros, MD, PhD',
-      flags: '🇵🇹',
-      role: 'Obstetricia y Ginecología',
-      image: '/img/about/team/team-joana-barros.jpg',
-    },
-  ]}
+]}
 />
 
 <HeadlineSection
