datate data paymente documents

--- a/content/payment-policies/br.mdx
+++ b/content/payment-policies/br.mdx
@@ -1,6 +1,6 @@
 # Políticas de Pagamento
 
-_Data de Vigência:_ 20 de dezembro de 2024
+_Data de Vigência:_ 29 de maio de 2025
 
 Estas Políticas de Pagamento regem todas as transações financeiras realizadas através da plataforma **Eleva.care**. Ao utilizar nossos serviços de pagamento, você concorda em estar sujeito a estas políticas além de nossos Termos e Condições.
 
@@ -10,8 +10,6 @@ A Eleva.care aceita vários métodos de pagamento incluindo:
 
 - Cartões de crédito e débito (Visa, Mastercard, American Express)
 - Multibanco (Portugal)
-- Débito Direto SEPA
-- Outros métodos de pagamento locais conforme disponibilidade
 
 ## 2. Políticas de Pagamento Multibanco
 
