--- a/content/payment-policies/es.mdx
+++ b/content/payment-policies/es.mdx
@@ -1,6 +1,6 @@
 # Políticas de Pago
 
-_Fecha de Entrada en Vigor:_ 20 de diciembre de 2024
+_Fecha de Entrada en Vigor:_ 29 de mayo de 2025
 
 Estas Políticas de Pago rigen todas las transacciones financieras realizadas a través de la plataforma **Eleva.care**. Al utilizar nuestros servicios de pago, acepta estar sujeto a estas políticas además de nuestros Términos y Condiciones.
 
@@ -10,8 +10,6 @@ Eleva.care acepta varios métodos de pago incluyendo:
 
 - Tarjetas de crédito y débito (Visa, Mastercard, American Express)
 - Multibanco (Portugal)
-- Débito Directo SEPA
-- Otros métodos de pago locales según disponibilidad
 
 ## 2. Políticas de Pago Multibanco
 
