--- a/content/payment-policies/pt.mdx
+++ b/content/payment-policies/pt.mdx
@@ -1,6 +1,6 @@
 # Políticas de Pagamento
 
-_Data de Entrada em Vigor:_ 20 de dezembro de 2024
+_Data de Entrada em Vigor:_ 29 de maio de 2025
 
 Estas Políticas de Pagamento regem todas as transações financeiras conduzidas através da plataforma **Eleva.care**. Ao utilizar os nossos serviços de pagamento, concorda em estar vinculado a estas políticas, para além dos nossos Termos e Condições.
 
@@ -10,8 +10,6 @@ A Eleva.care aceita vários métodos de pagamento incluindo:
 
 - Cartões de crédito e débito (Visa, Mastercard, American Express)
 - Multibanco (Portugal)
-- Débito Direto SEPA
-- Outros métodos de pagamento locais conforme disponíveis
 
 ## 2. Políticas de Pagamento Multibanco
 
