fix typos legal paymentes

--- a/content/payment-policies/en.mdx
+++ b/content/payment-policies/en.mdx
@@ -2,7 +2,7 @@
 
 _Effective Date:_ May 29, 2025
 
-These Payment Policies govern all financial transactions conducted through **Eleva.care** platform. By using our payment services, you agree to be bound by these policies in addition to our Terms and Conditions.
+These Payment Policies govern all financial transactions conducted through the Eleva.care platform. By using our payment services, you agree to be bound by these policies in addition to our Terms and Conditions.
 
 ## 1. Payment Methods
 
@@ -38,7 +38,7 @@ If a Multibanco payment is processed after the 24-hour reservation period:
 
 ### 3.1 Conflict Detection
 
-Our system automatically detects conflicts including:
+Our system automatically detects conflicts, including:
 
 - **Time slot conflicts**: When another patient has booked the same or overlapping time
 - **Minimum notice violations**: When the appointment no longer meets the expert's minimum notice requirements
@@ -103,7 +103,7 @@ In cases of system errors or special circumstances:
 
 - All payment data is processed securely through Stripe
 - We do not store payment card details on our servers
-- All transactions are encrypted and comply with PCI DSS standards
+- All transactions are encrypted and comply with PCI DSS standards.
 
 ### 6.2 Fraud Prevention
 
