--- a/content/payment-policies/es.mdx
+++ b/content/payment-policies/es.mdx
@@ -6,7 +6,7 @@ Estas Políticas de Pago rigen todas las transacciones financieras realizadas a 
 
 ## 1. Métodos de Pago
 
-Eleva.care acepta varios métodos de pago incluyendo:
+Eleva.care acepta varios métodos de pago, incluyendo:
 
 - Tarjetas de crédito y débito (Visa, Mastercard, American Express)
 - Multibanco (Portugal)
@@ -22,9 +22,10 @@ Eleva.care acepta varios métodos de pago incluyendo:
 
 Al pagar con Multibanco para citas programadas con más de 72 horas de anticipación:
 
-- Su horario de cita está **reservado por 24 horas** desde el momento de la reserva
+- Su horario de cita está **reservado por 24 horas** desde el momento de la reserva.
 - Tiene **24 horas** para completar el pago Multibanco
-- Si el pago no se recibe dentro de 24 horas, la reserva de horario expira y queda disponible para otros pacientes
+- Si no se recibe el pago dentro de este período, la reserva será cancelada automáticamente.
+- Recibirá un correo electrónico de confirmación una vez que el pago haya sido procesado.
 
 ### 2.3 Procesamiento de Pago Tardío
 
@@ -40,7 +41,7 @@ Si un pago Multibanco se procesa después del período de reserva de 24 horas:
 
 Nuestro sistema detecta automáticamente conflictos incluyendo:
 
-- **Conflictos de horario**: Cuando otro paciente ha reservado el mismo horario o horario superpuesto
+- **Conflictos de horario**: Cuando otro paciente ha reservado el mismo horario u horario superpuesto
 - **Violaciones de aviso mínimo**: Cuando la cita ya no cumple con los requisitos de aviso mínimo del especialista
 - **Cambios de disponibilidad del especialista**: Cuando el especialista ya no está disponible en el horario programado
 
