--- a/content/payment-policies/br.mdx
+++ b/content/payment-policies/br.mdx
@@ -6,7 +6,7 @@ Estas Políticas de Pagamento regem todas as transações financeiras realizadas
 
 ## 1. Métodos de Pagamento
 
-A Eleva.care aceita vários métodos de pagamento incluindo:
+A Eleva.care aceita vários métodos de pagamento, incluindo:
 
 - Cartões de crédito e débito (Visa, Mastercard, American Express)
 - Multibanco (Portugal)
